# abstract-nonsense

./: .clangd  .gitignore  2. functors.md  Makefile  README.md  algos.md  codelens.csv  debug.hpp  functors.md  line-ave.py  stdc++.h  template.cpp  watch.sh
archive/: 0kpxhexmvfd.cpp  1b5dozl.cpp  1tu6k7ns.cpp  1uw4v.cpp  2wqrl3zj.cpp  37ytb6cr5.cpp  3fc3ddhzw.cpp  4ejgjk30.cpp  (+95 more)
leetcode/: 1.cc  1002.cc  1003.cc  1003.check-if-word-is-valid-after-substitutions.cpp  1006.cc  1006.clumsy-factorial.cpp  1007.cc  1007.minimum-domino-rotations-for-equal-row.cpp  1010.cc  1010.pairs-of-songs-with-total-durations-divisible-by-60.cpp  1011.capacity-to-ship-packages-within-d-days.cpp  1011.cc  1014.best-sightseeing-pair.cpp  1014.cc  1015.smallest-integer-divisible-by-k.cpp  1016.binary-string-with-substrings-representing-1-to-n.cpp  1016.cc  1019.next-greater-node-in-linked-list.cpp  1020.cc  1023.camelcase-matching.cpp  1024.video-stitching.cpp  1026.maximum-difference-between-node-and-ancestor.cpp  1027.longest-arithmetic-subsequence.cpp  1031.maximum-sum-of-two-non-overlapping-subarrays.cpp  1033.cc  1033.moving-stones-until-consecutive.cpp  1034.coloring-a-border.cpp  1036.cc  1040.cc  1042.flower-planting-with-no-adjacent.cpp  1043.partition-array-for-maximum-sum.cpp  1048.longest-string-chain.cpp  1052.grumpy-bookstore-owner.cpp  1053.cc  1057.campus-bikes.cpp  1059.all-paths-from-source-lead-to-destination.cpp  1060.missing-element-in-sorted-array.cpp  1061.lexicographically-smallest-equivalent-string.cpp  1062.longest-repeating-substring.cpp  1066.campus-bikes-ii.cpp  (+248 more)
(+556 files in other folders)
